[package]
name = "etsy"
version = "0.1.0"
authors = ["Marcello <hey@marcello.gg>"]
description = "An Etsy API wrapper"
readme = "README.md"
repository = "https://github.com/marcellodotgg/etsy-rs"
keywords = ["Etsy", "etsy", "api"]
license = "MIT"
edition = "2021"

[lib]
name = "etsy"
path = "src/lib.rs"

[[bin]]
name = "etsycli"
path = "src/bin/etsycli.rs"

[dependencies]
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
